crates/executor/src/tests/sql/functions/snapshots/unimplemented/query_unimplemented_account_function.snap
---
source: crates/executor/src/tests/sql/functions/unimplemented.rs
description: "\"SELECT CUMULATIVE_PRIVACY_LOSSES()\""
---
Err(
    "Error: DataFusion error: This feature is not implemented: Function 'cumulative_privacy_losses' is not implemented yet. Details: https://docs.snowflake.com/en/sql-reference/functions/cumulative_privacy_losses",
)
