crates/executor/src/tests/sql/functions/snapshots/unimplemented/query_unimplemented_aggregate_function.snap
---
source: crates/executor/src/tests/sql/functions/unimplemented.rs
description: "\"SELECT APPROXIMATE_SIMILARITY(column1) FROM employee_table\""
---
Err(
    "Error: DataFusion error: This feature is not implemented: Function 'approximate_similarity' is not implemented yet. Details: https://docs.snowflake.com/en/sql-reference/functions/approximate_similarity",
)
