crates/executor/src/tests/sql/functions/snapshots/unimplemented/query_unimplemented_conditional_function.snap
---
source: crates/executor/src/tests/sql/functions/unimplemented.rs
description: "\"SELECT GREATEST_IGNORE_NULLS(true, false)\""
---
Err(
    "Error: DataFusion error: This feature is not implemented: Function 'greatest_ignore_nulls' is not implemented yet. Details: https://docs.snowflake.com/en/sql-reference/functions/greatest_ignore_nulls",
)
