crates/executor/src/tests/sql/functions/snapshots/unimplemented/query_unimplemented_differential_privacy_function.snap
---
source: crates/executor/src/tests/sql/functions/unimplemented.rs
description: "\"SELECT DP_INTERVAL_HIGH(*)\""
---
Err(
    "Error: DataFusion error: This feature is not implemented: Function 'dp_interval_high' is not implemented yet. Details: https://docs.snowflake.com/en/sql-reference/functions/dp_interval_high",
)
