crates/executor/src/tests/sql/functions/snapshots/unimplemented/query_unimplemented_encryption_function.snap
---
source: crates/executor/src/tests/sql/functions/unimplemented.rs
description: "\"SELECT DECRYPT('test', 'key')\""
---
Err(
    "Error: DataFusion error: This feature is not implemented: Function 'decrypt' is not implemented yet. Details: https://docs.snowflake.com/en/sql-reference/functions/decrypt",
)
