crates/executor/src/tests/sql/functions/snapshots/unimplemented/query_unimplemented_generation_function.snap
---
source: crates/executor/src/tests/sql/functions/unimplemented.rs
description: "\"SELECT NORMAL('seq1')\""
---
Err(
    "Error: DataFusion error: This feature is not implemented: Function 'normal' is not implemented yet. Details: https://docs.snowflake.com/en/sql-reference/functions/normal",
)
